Centered and add style.css

--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <html>
-	<head></head>
+	<head>
+		<link rel="stylesheet" type="text/css" href="style.css">
+	</head>
 	<body>
-		<img src="heart.png">
-		<h1>Coming soon..</h1>
+		<div id="container">
+			<img id="logo" src="heart.png">
+			<h1>Coming soon..</h1>
+		</div>
 	</body>
 </html>
